--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,14 @@ dependencies {
     compile 'com.youth.banner:banner:1.4.9'
     compile 'com.sunfusheng:marqueeview:1.3.1'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.lzy.widget:ninegridview:0.2.0'
     implementation project(':amaplibrary')
     implementation project(':xflibrary')
+
+    compile 'com.facebook.fresco:fresco:1.5.0'
+    // For animated GIF support
+    compile 'com.facebook.fresco:animated-gif:1.5.0'
+    // For WebP support, including animated WebP
+    compile 'com.facebook.fresco:animated-webp:1.5.0'
+    compile 'com.facebook.fresco:webpsupport:1.5.0'
 }
