--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,9 +22,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    dataBinding {
-        enabled true
-    }
 }
 
 dependencies {
@@ -58,7 +55,6 @@ dependencies {
     compile 'com.lzy.widget:ninegridview:0.2.0'
     implementation project(':amaplibrary')
     implementation project(':xflibrary')
-
     compile 'com.facebook.fresco:fresco:1.5.0'
     // For animated GIF support
     compile 'com.facebook.fresco:animated-gif:1.5.0'
@@ -66,4 +62,9 @@ dependencies {
     compile 'com.facebook.fresco:animated-webp:1.5.0'
     compile 'com.facebook.fresco:webpsupport:1.5.0'
     compile 'com.gxz.pagerslidingtabstrip:library:1.3'
+    compile 'com.google.android:flexbox:0.2.7'
+    implementation 'com.android.support:cardview-v7:27.0.2'
+    compile 'com.google.dagger:dagger:2.13'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.9'
+   // provided 'org.glassfish:javax.annotation:10.0-b28'
 }
