--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <!-- 配置权限，用来记录应用配置信息 -->
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
+
     <!-- 获取手机录音机使用权限，听写、识别、语义理解需要用到此权限 -->
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <!-- 读取网络信息状态 -->
@@ -29,7 +30,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
-        android:name=".common.base.BaseApplocation"
+        android:name=".common.base.BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/logo"
         android:label="@string/app_name"
@@ -40,7 +41,7 @@
             android:name="com.amap.api.v2.apikey"
             android:value="d69640a56e82b4e6dd8a7c3e51149a73" />
 
-        <activity android:name=".LanucherActivity">
+        <activity android:name=".LauncherActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -67,7 +68,9 @@
         <activity android:name=".features.mycenter.activity.StationActivity" />
         <activity android:name=".features.mycenter.activity.UserInformationActivity" />
         <activity android:name=".features.mycenter.activity.AboutActivity" />
-        <activity android:name=".features.mycenter.activity.CommonSettingActivity"></activity>
+        <activity android:name=".features.mycenter.activity.CommonSettingActivity" />
+        <activity android:name=".features.login.LoginActivity" />
+        <activity android:name=".features.login.RegisterActivity"></activity>
     </application>
 
 </manifest>
