--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,5 +66,6 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.0.2'
     compile 'com.google.dagger:dagger:2.13'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.9'
-   // provided 'org.glassfish:javax.annotation:10.0-b28'
+    compile 'com.githang:status-bar-compat:0.7'
+    // provided 'org.glassfish:javax.annotation:10.0-b28'
 }
