--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,5 +67,6 @@ dependencies {
     compile 'com.google.dagger:dagger:2.13'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.9'
     compile 'com.githang:status-bar-compat:0.7'
+    compile 'cn.bingoogolapple:bga-banner:2.1.8@aar'
     // provided 'org.glassfish:javax.annotation:10.0-b28'
 }
